syntax = "proto3";

package render_proto;

service Render {
  rpc CreateRepo(CreateRepoRequest) returns (CreateRepoResponse);
  /* rpc ReadRepo(ReadRepoRequest) returns (ReadRepoResponse); */
  /* rpc UpdateRepo(UpdateRepoRequest) returns (UpdateRepoResponse); */
  /* rpc DeleteRepo(DeleteRepoRequest) returns (DeleteRepoResponse); */
}

message CreateRepoRequest {
  string name = 2;
}

message CreateRepoResponse {
  enum Result {
    SUCCESS = 0;
    FAILURE = 1;
  }

  Result result = 1;
  RepoResponse repository = 2;
}

/* message ReadRepoRequest { */
/*   string id = 1; */
/* } */

/* message ReadRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/*   RepoResponse repository = 2; */
/* } */

/* message UpdateRepoRequest { */
/*   string id = 1; */
/*   string user_id = 2; */
/*   string name = 3; */
/*   string description = 4; */
/* } */

/* message UpdateRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/* } */

/* message DeleteRepoRequest { */
/*   string id = 1; */
/* } */

/* message DeleteRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/* } */

message RepoResponse {
  string name = 3;
}


